// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> calls helpers and renders correctly with external 1`] = `
<div>
  <a
    class="link basic-blue"
    data-testid="anchor"
    href="/cabinet/"
  >
    Test link
  </a>
</div>
`;

exports[`<Link /> calls helpers and renders correctly with pseudo 1`] = `
<div>
  <a
    class="link basic-gray38"
    data-testid="anchor"
    role="button"
    tabindex="0"
  >
    Test link
  </a>
</div>
`;

exports[`<Link /> calls helpers with right params and renders correctly without external 1`] = `
<div>
  <a
    class="link testClass basic-gray38"
    data-testid="anchor"
    href="/cart/"
    target="_blank"
  >
    Test link
  </a>
</div>
`;

exports[`<Link /> render render pseudo link disabled properly 1`] = `
<div>
  <a
    class="link basic-blue disabled"
    data-testid="anchor"
    role="button"
  >
    Test link
  </a>
</div>
`;

exports[`<Link /> render render pseudo link properly 1`] = `
<div>
  <a
    class="link basic-blue"
    data-testid="anchor"
    role="button"
    tabindex="0"
  >
    Test link
  </a>
</div>
`;
